Bug 1801588 - Ensure region outside mask but inside clip is cleared for copy op. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D162536