dom/canvas/DrawTargetWebgl.cpp
@@ -1675,33 +1675,23 @@ bool DrawTargetWebgl::SharedContext::DrawRectAccel(
 
   const Matrix& currentTransform = GetTransform();
 
-  if (aOptions.mCompositionOp == CompositionOp::OP_SOURCE &&
-      ((aClipped && HasClipMask()) ||
-       !IsAlignedRect(aTransformed, currentTransform, aRect)) &&
-      aPattern.GetType() == PatternType::SURFACE) {
-    // We must emulate the source op for non-opaque surface patterns to avoid
-    // using dual-source blending. This requires clearing the clip region
-    // without using the surface's alpha before we actually add on the surface
-    // to the destination. For opaque surfaces, we can simply use the over op.
-    auto surfacePattern = static_cast<const SurfacePattern&>(aPattern);
-    CompositionOp op = CompositionOp::OP_OVER;
-    if (!surfacePattern.mSurface ||
-        !IsOpaque(surfacePattern.mSurface->GetFormat()) ||
-        aOptions.mAlpha != 1.0f) {
-      op = CompositionOp::OP_ADD;
-      if (DrawRectAccel(aRect, ColorPattern(DeviceColor(0, 0, 0, 0)),
-                        DrawOptions(1.0f, CompositionOp::OP_SOURCE,
-                                    aOptions.mAntialiasMode),
-                        Nothing(), nullptr, aTransformed, aClipped, aAccelOnly,
-                        aForceUpdate, aStrokeOptions, aVertexRange)) {
-        return false;
-      }
-    }
-    return DrawRectAccel(
-        aRect, aPattern,
-        DrawOptions(aOptions.mAlpha, op, aOptions.mAntialiasMode), aMaskColor,
-        aHandle, aTransformed, aClipped, aAccelOnly, aForceUpdate,
-        aStrokeOptions, aVertexRange);
+  if (aOptions.mCompositionOp == CompositionOp::OP_SOURCE && aTransformed &&
+      aClipped &&
+      (HasClipMask() || !currentTransform.PreservesAxisAlignedRectangles() ||
+       !currentTransform.TransformBounds(aRect).Contains(Rect(mClipRect)) ||
+       (aPattern.GetType() == PatternType::SURFACE &&
+        !IsAlignedRect(aTransformed, currentTransform, aRect)))) {
+    // Clear outside the mask region for masks that are not bounded by clip.
+    return DrawRectAccel(Rect(mClipRect), ColorPattern(DeviceColor(0, 0, 0, 0)),
+                         DrawOptions(1.0f, CompositionOp::OP_SOURCE,
+                                     aOptions.mAntialiasMode),
+                         Nothing(), nullptr, false, aClipped, aAccelOnly) &&
+           DrawRectAccel(aRect, aPattern,
+                         DrawOptions(aOptions.mAlpha, CompositionOp::OP_ADD,
+                                     aOptions.mAntialiasMode),
+                         aMaskColor, aHandle, aTransformed, aClipped,
+                         aAccelOnly, aForceUpdate, aStrokeOptions,
+                         aVertexRange);
   }
 
   // Set up the scissor test to reflect the clipping rectangle, if supplied.
